--- a/entry-3/style.css
+++ b/entry-3/style.css
@@ -9,15 +9,11 @@ body {
   justify-content: center;
 }
 
-body::before {
-  content: "";
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: url("grain.png") repeat;
-  background-size: 150px 150px;
-  opacity: 0.45;  
-  pointer-events: none; 
+body {
+  background-color: #F5EFE6;
+  background-image: url("grain.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;  
 }
 
 main {
