--- a/entry-5/style.css
+++ b/entry-5/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffe4d2;   /* 柔和奶粉色背景 */
+  background-color: #e7f5ffff;   /* 柔和奶粉色背景 */
   color: #6c3824;              /* 暖灰棕文字 */
   font-family: "Lato", sans-serif;
   line-height: 1.75;
