--- a/the-circle/style.css
+++ b/the-circle/style.css
@@ -4,5 +4,7 @@
   height: 50vh;
   background-color: blue;
   justify-content: center;
+  display: flex;
+  margin: auto;
   align-items: center;
 }
