--- a/entry-4/style.css
+++ b/entry-4/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F9F4E7;
+  background-color: #f9e7e7;
   color: #3C2F2F;
   font-family: "Lato", sans-serif;
   line-height: 1.75;
@@ -81,7 +81,6 @@ p {
   transform: translateY(-1px);
 }
 
-/* 显示提示文字 */
 #prompt-text {
   margin-top: 1rem;
   font-style: italic;
