--- a/entry-4/style.css
+++ b/entry-4/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f9e7e7;
+  background-color: #ffe0e0;
   color: #3C2F2F;
   font-family: "Lato", sans-serif;
   line-height: 1.75;
