--- a/entry-8/style.css
+++ b/entry-8/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F3EADC;   /* 柔和纸张底色 */
+  background-color: #cce5ffdf;   /* 柔和纸张底色 */
   color: #3F2F27;
   font-family: "Lato", sans-serif;
   line-height: 1.75;
